--- a/ex1.10/Dockerfile
+++ b/ex1.10/Dockerfile
@@ -2,4 +2,8 @@ FROM ubuntu:16.04
 
 WORKDIR /appsi
 COPY frontend-example-docker frontend-example-docker
-RUN ls -la
+RUN apt update && apt install -y curl && curl -sL https://deb.nodesource.com/setup_10.x | bash && apt install -y nodejs
+RUN node -v && npm -v
+RUN cd frontend-example-docker && npm install
+
+CMD cd frontend-example-docker && npm start
