--- a/ex1.10/Dockerfile
+++ b/ex1.10/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /appsi
 COPY frontend-example-docker frontend-example-docker
 RUN apt update && apt install -y curl && curl -sL https://deb.nodesource.com/setup_10.x | bash && apt install -y nodejs
 RUN node -v && npm -v
+
+ENV API_URL=http://localhost:8000
 RUN cd frontend-example-docker && npm install
 
 CMD cd frontend-example-docker && npm start
