--- a/ex3.1/Dockerfile-back
+++ b/ex3.1/Dockerfile-back
@@ -3,11 +3,9 @@ FROM ubuntu:16.04
 WORKDIR /appsi
 COPY backend-example-docker-master backend-example-docker
 
-RUN apt update
-RUN apt install -y curl
-RUN curl -sL https://deb.nodesource.com/setup_10.x | bash
-RUN apt install -y nodejs
-RUN node -v && npm -v
+RUN apt update && apt install -y curl && curl -sL https://deb.nodesource.com/setup_10.x | bash && apt install -y nodejs && \
+apt-get purge -y --auto-remove curl && \
+rm -rf /var/lib/apt/lists/*
 
 ENV FRONT_URL=http://localhost:5000
 CMD cd backend-example-docker && npm install && npm start
