--- a/ex3.1/Dockerfile-front
+++ b/ex3.1/Dockerfile-front
@@ -3,11 +3,9 @@ FROM ubuntu:16.04
 WORKDIR /appsi
 COPY frontend-example-docker-master frontend-example-docker
 
-RUN apt update
-RUN apt install -y curl
-RUN curl -sL https://deb.nodesource.com/setup_10.x | bash
-RUN apt install -y nodejs
-RUN node -v && npm -v
+RUN apt update && apt install -y curl && curl -sL https://deb.nodesource.com/setup_10.x | bash && apt install -y nodejs && \
+apt-get purge -y --auto-remove curl && \
+rm -rf /var/lib/apt/lists/*
 
 RUN cd frontend-example-docker && npm install
 
