--- a/ex3.2/Dockerfile
+++ b/ex3.2/Dockerfile
@@ -1,5 +1,5 @@
 FROM taskinen/yle-dl
 
-RUN pip uninstall -y setuptools youtube_dl pip && rm -rf /var/cache/apk/*
+RUN pip uninstall -y youtube_dl pip && rm -rf /var/cache/apk/*
 
 CMD ["https://areena.yle.fi/1-50393277"]
