--- a/ex3.6/Dockerfile
+++ b/ex3.6/Dockerfile
@@ -1,7 +1,11 @@
-FROM openjdk:8-slim
+FROM openjdk:8-slim as build
 
 WORKDIR /appsi
 COPY spring-example-project .
 RUN ./mvnw package
 
-CMD java -jar ./target/docker-example-1.1.3.jar
+FROM openjdk:8-jre-slim-buster
+COPY --from=build /appsi/target/docker-example-1.1.3.jar .
+RUN adduser --disabled-password appsi
+USER appsi
+CMD java -jar docker-example-1.1.3.jar
